--- a/index.html
+++ b/index.html
@@ -1,87 +1,13 @@
-<!document html>
 <html>
 <head>
-	<style>
-		.shafa {
-			width: 450px;
-			border: 1px #555  solid ;
-			padding: 5px;
-			margin: 15px;
-			float: left;
-			
-		}
-		.polychka1{
-			background: #eee;
-		}
-		.polychka2{
-			background: #ccc;
-		}
-		.polychka3{
-			background: #aaa;
-		}
-		.polychka4{
-			background: #999;
-		}
-		
-		.polychka1, .polychka2, .polychka3, .polychka4{
-			height: 260px;
-			border: 2px #333 solid;
-			margin-top: 15px;
-			
-		}
-		
-		.hatka{ 
-			width: 100px;
-			height: 200px;
-			border: 2px #333 solid;
-			float: left;
-			padding: 5px;
-			margin: 15px;
-		}	
-	</style>
+<meta content="charset=windows-1251">
 </head>
 <body>
-	<div class="shafa">
-		<div class="polychka1">
-			<div class="hatka">
-								<a  name="line1"></a>
-								<a  href="#line2"> polychka2</a><br>
-			</div>
-			<div class="hatka">
-			</div>
-			<div class="hatka">
-			</div>
-		</div>
-		<div class="polychka2">
-			<div class="hatka">
-								<a  name="line2"></a>
-								<a  href="#line3"> polychka3</a>
-			</div>
-			<div class="hatka">
-			</div>
-			<div class="hatka">
-			</div>
-		</div>
-		<div class="polychka3">
-			<div class="hatka">
-								<a  name="line3"></a>
-								<a  href="#line4"> polychka4</a>
-			</div>
-			<div class="hatka">
-			</div>
-			<div class="hatka">
-			</div>
-		</div>
-		<div class="polychka4">
-			<div class="hatka">
-								<a  name="line4"></a>
-								<a  href="#line1"> polychka1</a>
-			</div>
-			<div class="hatka">
-			</div>
-			<div class="hatka">
-			</div>
-		</div>
-	</div> <!-- shafka close-->
+<h1> Перший html-документ
+</h1>
+<hr>
+<p>
+Корова не похожа на коня, а кінь не похожий на корову. Саме цю подібність ми беремо за основу.
+</p>
 </body>
 </html>
