--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <head>
 <meta content="charset=windows-1251">
 </head>
-<body>
-<h1> Перший html-документ
+<body bgcolor=#ABF3E9 text=#073736>
+<h1> Перший HTML-документ
 </h1>
-<hr>
+<hr size=10 noshade>
+<h2 align=center>
 <p>
-Корова не похожа на коня, а кінь не похожий на корову. Саме цю подібність ми беремо за основу.
+Український фольклор
 </p>
+</h2>
+<hr size=5 hoshade>
+<h3>
+Пислів`я та приказки
+</h3>
+<hr size=3 noshade>
+<h4>
+1.З віком розум приходить.<br>
+2.Життя прожити - не поле перейти.<br>
+3.Літа пливуть, як вода.<br>
+4.Де є життя, там є й надія.<br>
+5.Вік живи - вік учись.<br>
+6.Знання робить життя красним.<br>
+7.Книга вчить, як на світі жить.<br>
+8.Не краса красить, а розум.<br>
+9.Нема гори без долини.<br>
+10.Здоров`я за гроші не купиш.<br>
+</h4>
+<hr size=1 noshade>
+
 </body>
 </html>
