--- a/index.html
+++ b/index.html
@@ -1,34 +1,19 @@
 <html>
-<head>
+<head bgcolor=#FFFEFB; text=#741313>
 <meta content="charset=windows-1251">
+<link rel="stylesheet" href="styles.css">
 </head>
-<body bgcolor=#ABF3E9 text=#073736>
-<h1> Перший HTML-документ
-</h1>
-<hr size=10 noshade>
-<h2 align=center>
-<p>
-Український фольклор
-</p>
-</h2>
-<hr size=5 hoshade>
-<h3>
-Пислів`я та приказки
-</h3>
-<hr size=3 noshade>
-<h4>
-1.З віком розум приходить.<br>
-2.Життя прожити - не поле перейти.<br>
-3.Літа пливуть, як вода.<br>
-4.Де є життя, там є й надія.<br>
-5.Вік живи - вік учись.<br>
-6.Знання робить життя красним.<br>
-7.Книга вчить, як на світі жить.<br>
-8.Не краса красить, а розум.<br>
-9.Нема гори без долини.<br>
-10.Здоров`я за гроші не купиш.<br>
-</h4>
-<hr size=1 noshade>
+<body bgcolor=#FFFEFB; text=#741313>
+<link rel="stylesheet" href="styles.css">
+<h1 align=center>
+<hr size=3 noshade color=#320505>
+Погода у Львові
 
+</h1>
+<hr size=5 noshade color=#320505 >
+<h2>
+Всім відомо, що у Львові не найтепліший клімат, але все ж останні події пов`язані з погодою є досить дивними. Попри те, що вже майже закінчився травень, морози не зупинились. Якщо до цього рідко і бували теплі та сонячні дні, то зараз постійно йдуть дощі. І, враховуючи прогнози погоди, до кінця травня дощі мають бути з громом і блискавкою. Звісно, ця погода не сильно приємна, але сподіваємося, що влітку вже будуть теплі та сонячні дні. :)
+<hr size=1 noshade color=#320505>
+</h2>
 </body>
 </html>
